--- a/qutebrowser/qsettings/QtProject.conf
+++ b/qutebrowser/qsettings/QtProject.conf
@@ -1,7 +1,7 @@
 [FileDialog]
-history=file:///home/beto, file:///home/beto/Projects/CV, file:///home/beto/Projects/scraper, file:///home/beto/Downloads, file:///home/beto/spryserver, file:///home/beto/redes
-lastVisited=file:///home/beto/redes
-qtVersion=5.11.2
+history=file:///home/beto/Projects/scraper, file:///home/beto/Downloads, file:///home/beto/spryserver, file:///home/beto/redes, file:///tmp/docker-curriculum/flask-app
+lastVisited=file:///tmp/docker-curriculum/flask-app
+qtVersion=5.12.0
 shortcuts=file:, file:///home/beto
 sidebarWidth=106
 treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x2\x63\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\x1Z\0\0\0\x1\0\0\0\0\0\0\0\x45\0\0\0\x1\0\0\0\0\0\0\0I\0\0\0\x1\0\0\0\0\0\0\0{\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
