--- a/qutebrowser/qsettings/QtProject.conf
+++ b/qutebrowser/qsettings/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
 history=file:///home/beto/Projects/scraper, file:///home/beto/Downloads, file:///home/beto/spryserver, file:///home/beto/redes, file:///tmp/docker-curriculum/flask-app
-lastVisited=file:///tmp/docker-curriculum/flask-app
+lastVisited=file:///home/beto/redes
 qtVersion=5.12.0
 shortcuts=file:, file:///home/beto
 sidebarWidth=106
