Refinment of some files

--- a/tmux.conf
+++ b/tmux.conf
@@ -91,7 +91,7 @@ bind M run-shell "~/.tmux/scripts/resize-adaptable.sh -l main-vertical -p 50"
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
 # reload config
-bind r source-file ~/.config/tmux/tmux.conf \; display-message "Config reloaded..."
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # auto window rename
 set-window-option -g automatic-rename
