Updated files, added option parser for install.sh, cleaned conf files

--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,9 @@ set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
 set-option -g status-attr default
 
+# set default shell
+set-option -g default-shell "$SHELL"
+
 # History limit
 set -g history-limit 10000
 
@@ -39,12 +42,12 @@ set-option -g display-panes-colour colour166 #orange
 set-window-option -g clock-mode-colour green #green
 
 
-set -g status-interval 1
+set -g status-interval 2
 set -g status-justify centre # center align window list
 set -g status-left-length 20
 set -g status-right-length 140
 set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+set -g status-right '#[fg=green,bg=default,bright]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
 
 # Status bar on top
 set-option -g status-position top
@@ -150,12 +153,21 @@ bind-key -n M-* select-window -t 7
 bind-key -n M-) select-window -t 8
 bind-key -n M-+ select-window -t 9
 
+# tmux resurrcet & continuum config
+set -g @continuum-boot 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g default-command "reattach-to-user-namespace -l $SHELL"
+
+
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @colors-solarized '256'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 run -b '~/.config/tmux/plugins/tpm/tpm'
