--- a/tmux.conf
+++ b/tmux.conf
@@ -154,7 +154,7 @@ bind-key -n M-+ select-window -t 9
 # tmux resurrcet & continuum config
 set -g @continuum-boot 'on'
 set -g @resurrect-strategy-nvim 'session'
-set -g default-command "reattach-to-user-namespace -l $SHELL"
+if-shell 'test "$(uname) = "Darwin"' 'set -g default-command "reattach-to-user-namespace -l $SHELL"'
 
 
 # Plugins
