--- a/nvim/requirements.txt
+++ b/nvim/requirements.txt
@@ -1,26 +1,48 @@
+ansible==2.7.6
+ansible-lint==4.0.1
+asn1crypto==0.24.0
 atomicwrites==1.2.1
 attrs==18.2.0
+bcrypt==3.1.6
+cffi==1.11.5
+cryptography==2.4.2
+decorator==4.3.0
 future==0.17.1
 greenlet==0.4.15
+idna==2.8
 jedi==0.13.1
+Jinja2==2.10
+MarkupSafe==1.1.0
 mccabe==0.6.1
 more-itertools==4.3.0
 msgpack==0.6.0
 neovim==0.3.1
 neovim-remote==2.1.1
+networkx==2.2
 nodeenv==1.3.3
+numpy==1.15.4
+NVR==0.0.6
+pandas==0.23.4
+paramiko==2.4.2
 parso==0.3.1
 pluggy==0.8.0
 psutil==5.4.8
 py==1.7.0
+pyasn1==0.4.5
 pycodestyle==2.4.0
+pycparser==2.19
 pydocstyle==3.0.0
 pyflakes==2.0.0
+PyNaCl==1.3.0
 pynvim==0.3.1
 pytest==4.0.1
+python-dateutil==2.7.5
 python-jsonrpc-server==0.0.2
 python-language-server==0.21.4
+pytz==2018.7
+PyYAML==3.13
 rope==0.11.0
+scipy==1.1.0
 six==1.11.0
 snowballstemmer==1.2.1
 yapf==0.25.0
