--- a/nvim/requirements.txt
+++ b/nvim/requirements.txt
@@ -3,6 +3,7 @@ ansible-lint==4.0.1
 asn1crypto==0.24.0
 atomicwrites==1.2.1
 attrs==18.2.0
+autopep8==1.4.4
 bcrypt==3.1.6
 cffi==1.11.5
 cryptography==2.4.2
