--- a/gnupg/gpg-agent.conf
+++ b/gnupg/gpg-agent.conf
@@ -1,4 +1,4 @@
 default-cache-ttl 3600
 enable-ssh-support
-pinentry-program /usr/bin/pinentry
+pinentry-program /usr/bin/pinentry-tty
 default-cache-ttl-ssh 10800
