--- a/nvim/requirements.txt
+++ b/nvim/requirements.txt
@@ -1,49 +1,110 @@
+alabaster==0.7.11
 ansible==2.7.10
-ansible-lint==4.0.1
+appdirs==1.4.3
 asn1crypto==0.24.0
-atomicwrites==1.2.1
-attrs==18.2.0
-autopep8==1.4.4
+attrs==19.1.0
+Babel==2.6.0
+backcall==0.1.0
 bcrypt==3.1.6
+bleach==3.1.0
+btrfsutil==1.1.0
+CacheControl==0.12.5
 cffi==1.12.3
+chardet==3.0.4
+Click==7.0
+colorama==0.4.1
+CommonMark==0.5.4
 cryptography==2.6.1
-decorator==4.3.0
+debops==0.8.1
+decorator==4.4.0
+defusedxml==0.6.0
+distlib==0.2.8
+distro==1.4.0
+docopt==0.6.2
+docutils==0.14
+dopy==0.3.7
+entrypoints==0.3
 future==0.17.1
-greenlet==0.4.15
+html5lib==1.0.1
 idna==2.8
-jedi==0.13.1
+imagesize==1.0.0
+iotop==0.6
+ipykernel==4.9.0
+ipython==7.3.0
+ipython-genutils==0.1.0
+ipywidgets==7.4.2
+isbg==2.1.1
+jedi==0.13.3
 Jinja2==2.10.1
+jsonschema==2.6.0
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.4.0
+kaptan==0.5.11
+lensfun==0.3.2
+libtmux==0.8.1
+lit==0.8.0.dev0
+lockfile==0.12.2
+louis==3.9.0
 MarkupSafe==1.1.1
-mccabe==0.6.1
-more-itertools==4.3.0
-msgpack==0.6.0
-neovim==0.3.1
-neovim-remote==2.1.1
-networkx==2.2
-nodeenv==1.3.3
-numpy==1.15.4
-NVR==0.0.6
-pandas==0.23.4
+meson==0.50.1
+mistune==0.8.4
+msgpack==0.6.1
+nbconvert==5.4.0
+nbformat==4.4.0
+notebook==5.7.8
+notmuch==0.28.3
+packaging==19.0
+pandocfilters==1.4.2
 paramiko==2.4.2
-parso==0.3.1
-pluggy==0.8.0
-psutil==5.4.8
-py==1.7.0
+parso==0.3.3
+pass-import==2.4
+pep517==0.5.0
+pexpect==4.6.0
+pickleshare==0.7.5
+ply==3.11
+progress==1.5
+prometheus-client==0.6.0
+prompt-toolkit==2.0.9
+ptyprocess==0.6.0
+pulsemixer==1.4.0
 pyasn1==0.4.5
-pycodestyle==2.4.0
 pycparser==2.19
-pydocstyle==3.0.0
-pyflakes==2.0.0
+Pygments==2.3.1
 PyNaCl==1.3.0
-pynvim==0.3.1
-pytest==4.0.1
-python-dateutil==2.7.5
-python-jsonrpc-server==0.0.2
-python-language-server==0.21.4
-pytz==2018.7
-PyYAML==5.1
-rope==0.11.0
-scipy==1.1.0
+pyparsing==2.4.0
+pyPEG2==2.15.2
+PyQt5==5.12.1
+PyQt5-sip==4.19.16
+PyQtWebEngine==5.12.1
+python-dateutil==2.8.0
+python-libtorrent==1.1.12
+pytoml==0.1.20
+pytz==2018.5
+PyYAML==3.13
+pyzmq==18.0.1
+qutebrowser==1.6.1
+recommonmark==0.4.0
+Reflector==2019.3.8.1.54.39
+requests==2.21.0
+retrying==1.3.3
+Send2Trash==1.5.0
+simplegeneric==0.8.1
 six==1.12.0
 snowballstemmer==1.2.1
-yapf==0.25.0
+Sphinx==1.7.7
+sphinx-rtd-theme==0.4.1
+sphinxcontrib-websupport==1.1.0
+terminado==0.8.1
+testpath==0.4.2
+tmuxp==1.5.1
+tornado==5.1.1
+traitlets==4.3.2
+ufw==0.36
+urllib3==1.24.2
+urlscan==0.9.2
+urwid==2.0.1
+wcwidth==0.1.7
+webencodings==0.5.1
+widgetsnbextension==3.4.2
+youtube-dl==2019.4.24
