Added antibody to PATH, modifyed nvim's plugin file

--- a/tmux.conf
+++ b/tmux.conf
@@ -156,6 +156,9 @@ set -g @continuum-boot 'on'
 set -g @resurrect-strategy-nvim 'session'
 # if-shell 'test "$(uname) = "Darwin"' 'set -g default-command "reattach-to-user-namespace -l $SHELL"'
 
+# urlview configuration
+set -g @urlview-key 'v'
+
 
 # Plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -167,5 +170,7 @@ set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @colors-solarized '256'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+
 
 run -b '~/.config/tmux/plugins/tpm/tpm'
