--- a/tmux.conf
+++ b/tmux.conf
@@ -151,6 +151,8 @@ bind-key -n M-* select-window -t 7
 bind-key -n M-) select-window -t 8
 bind-key -n M-+ select-window -t 9
 
+set-option -g update-environment 'DBUS_SESSION_BUS_ADDRESS'
+
 # tmux resurrcet & continuum config
 set -g @continuum-boot 'on'
 set -g @resurrect-strategy-nvim 'session'
