usign tmux/sensible, simpler tmux config, added nvim plugins

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,15 +6,6 @@ set-option -g status-attr default
 # set default shell
 set-option -g default-shell "$SHELL"
 
-# History limit
-set -g history-limit 10000
-
-# set window split
-bind-key "\\" split-window -h
-bind-key "-" split-window
-unbind '"'
-unbind %
-
 # default window title colors
 set-window-option -g window-status-fg colour244 #base0
 set-window-option -g window-status-bg default
@@ -62,13 +53,10 @@ setw -g pane-base-index 1
 # Renumber windows auto
 set -g renumber-windows on
 
-# Allows for faster key repetition
-set -s escape-time 0
-
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
+# setw -g aggressive-resize on
 
 # Allows us to use C-a a <command> to send commands to a TMUX session inside
 # another TMUX session
@@ -91,39 +79,26 @@ bind M run-shell "~/.tmux/scripts/resize-adaptable.sh -l main-vertical -p 50"
 
 bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 
-# reload config
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
-
 # auto window rename
 set-window-option -g automatic-rename
 
 # color
 set -g default-terminal "tmux-256color"
 
-# https://github.com/edkolev/dots/blob/master/tmux.conf
-# Updates for tmux 1.9's current pane splitting paths.
-
-# from powerline
-run-shell "tmux set-environment -g TMUX_VERSION_MAJOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f1 | sed 's/[^0-9]*//g')"
-run-shell "tmux set-environment -g TMUX_VERSION_MINOR $(tmux -V | cut -d' ' -f2 | cut -d'.' -f2 | sed 's/[^0-9]*//g')"
-
 # Vi copypaste mode
 set-window-option -g mode-keys vi
-if-shell "test '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 4 \)'" 'bind-key -Tcopy-mode-vi v send -X begin-selection; bind-key -Tcopy-mode-vi y send -X copy-selection-and-cancel'
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 4\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'bind-key -t vi-copy v begin-selection; bind-key -t vi-copy y copy-selection'
-
-# status bar
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 2\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set-option -g status-utf8 on'
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
 
 # rm mouse mode fail
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -ge 1\)' 'set -g mouse off'
-if-shell '\( #{$TMUX_VERSION_MAJOR} -eq 2 -a #{$TMUX_VERSION_MINOR} -lt 1\) -o #{$TMUX_VERSION_MAJOR} -le 1' 'set -g mode-mouse off'
+set -g mouse off
+set -g mode-mouse off
 
 # fix pane_current_path on new window and splits
-if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind c; bind c new-window -c "#{pane_current_path}"'
-if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" "unbind '\"'; bind '\"' split-window -v -c '#{pane_current_path}'"
-if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind v; bind v split-window -h -c "#{pane_current_path}"'
-if-shell "test '#{$TMUX_VERSION_MAJOR} -gt 1 -o \( #{$TMUX_VERSION_MAJOR} -eq 1 -a #{$TMUX_VERSION_MINOR} -ge 8 \)'" 'unbind %; bind % split-window -h -c "#{pane_current_path}"'
+unbind c; bind c new-window -c "#{pane_current_path}"
+unbind '\"'; bind '-' split-window -v -c '#{pane_current_path}'
+unbind v
+unbind %; bind "\\" split-window -h -c "#{pane_current_path}"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -154,15 +129,19 @@ bind-key -n M-+ select-window -t 9
 set-option -g update-environment 'DBUS_SESSION_BUS_ADDRESS'
 
 # tmux resurrcet & continuum config
-set -g @continuum-boot 'on'
+set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
-# if-shell 'test "$(uname) = "Darwin"' 'set -g default-command "reattach-to-user-namespace -l $SHELL"'
+set -g @continuum-boot 'on'
+set -g @continuum-restore 'on'
+
+if-shell 'test "$(uname) = "Darwin"' 'set -g @continuum-boot-options "iterm"'
 
 # urlview configuration
 set -g @urlview-key 'v'
 
 
 # Plugins
+set -g @plugin 'tmux-plugins/sensible'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
