--- a/tmux.conf
+++ b/tmux.conf
@@ -1,42 +1,9 @@
-# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
-
-# set default shell
-set-option -g default-shell "$SHELL"
-
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-# clock
-set-window-option -g clock-mode-colour green #green
-
-
 set -g status-interval 2
 set -g status-justify centre # center align window list
 set -g status-left-length 20
 set -g status-right-length 140
 set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set -g status-right '#[fg=green,bg=default,bright]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+set -g status-right '#[fg=green]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
 
 # Status bar on top
 set-option -g status-position top
@@ -56,7 +23,7 @@ set -g renumber-windows on
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
-# setw -g aggressive-resize on
+setw -g aggressive-resize on
 
 # Allows us to use C-a a <command> to send commands to a TMUX session inside
 # another TMUX session
@@ -82,6 +49,9 @@ bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 # auto window rename
 set-window-option -g automatic-rename
 
+# reload config
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+
 # color
 set -g default-terminal "tmux-256color"
 
@@ -92,11 +62,10 @@ bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
 
 # rm mouse mode fail
 set -g mouse off
-set -g mode-mouse off
 
 # fix pane_current_path on new window and splits
 unbind c; bind c new-window -c "#{pane_current_path}"
-unbind '\"'; bind '-' split-window -v -c '#{pane_current_path}'
+unbind '"'; bind '-' split-window -v -c '#{pane_current_path}'
 unbind v
 unbind %; bind "\\" split-window -h -c "#{pane_current_path}"
 
@@ -141,17 +110,18 @@ set -g @urlview-key 'v'
 
 
 # Plugins
-set -g @plugin 'tmux-plugins/sensible'
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @colors-solarized '256'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @tpm_plugins ' \
+    tmux-plugins/sensible \
+    tmux-plugins/tpm \
+    tmux-plugins/tmux-copycat \
+    tmux-plugins/tmux-yank \
+    tmux-plugins/tmux-open \
+    seebi/tmux-colors-solarized \
+    thewtex/tmux-mem-cpu-load \
+    tmux-plugins/tmux-resurrect \
+    tmux-plugins/tmux-continuum \
+    tmux-plugins/tmux-urlview \
+    '
 
-
-run -b '~/.config/tmux/plugins/tpm/tpm'
+run '$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm'
