Nvim: force js as javascript.jsx

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+set-environment -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins/'
+
 set -g status-interval 2
 set -g status-justify centre # center align window list
 set -g status-left-length 20
@@ -103,7 +105,7 @@ set -g @resurrect-strategy-nvim 'session'
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 
-if-shell 'test "$(uname) = "Darwin"' 'set -g @continuum-boot-options "iterm"'
+if-shell 'test "$(uname) = "Darwin"' 'set -g @continuum-boot-options "iterm2"'
 
 # urlview configuration
 set -g @urlview-key 'v'
@@ -112,7 +114,7 @@ set -g @urlview-key 'v'
 # Plugins
 set -g @colors-solarized '256'
 set -g @tpm_plugins ' \
-    tmux-plugins/sensible \
+    tmux-plugins/tmux-sensible \
     tmux-plugins/tpm \
     tmux-plugins/tmux-copycat \
     tmux-plugins/tmux-yank \
@@ -124,4 +126,4 @@ set -g @tpm_plugins ' \
     tmux-plugins/tmux-urlview \
     '
 
-run '$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm'
+run "$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm"
