Changed dmenu for bemenu, and urxvt for alacritty

--- a/tmux.conf
+++ b/tmux.conf
@@ -55,7 +55,7 @@ set-window-option -g automatic-rename
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # color
-set -g default-terminal "tmux-256color"
+# set -g default-terminal "screen-256color"
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
@@ -99,27 +99,29 @@ bind-key -n M-+ select-window -t 9
 
 set-option -g update-environment 'DBUS_SESSION_BUS_ADDRESS'
 
+set -g @nord_tmux_show_status_content "1"
+
 # tmux resurrcet & continuum config
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
 set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 
-if-shell 'test "$(uname) = "Darwin"' 'set -g @continuum-boot-options "iterm2"'
+if-shell 'test "$(uname) = "Darwin"' 'set -g @continuum-boot-options "alacritty"'
 
 # urlview configuration
 set -g @urlview-key 'v'
 
 
 # Plugins
-set -g @colors-solarized '256'
+# set -g @colors-solarized '256'
 set -g @tpm_plugins ' \
     tmux-plugins/tmux-sensible \
     tmux-plugins/tpm \
     tmux-plugins/tmux-copycat \
     tmux-plugins/tmux-yank \
+    arcticicestudio/nord-tmux \
     tmux-plugins/tmux-open \
-    seebi/tmux-colors-solarized \
     thewtex/tmux-mem-cpu-load \
     tmux-plugins/tmux-resurrect \
     tmux-plugins/tmux-continuum \
