--- a/sway/config
+++ b/sway/config
@@ -14,14 +14,14 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term urxvtc
+set $term alacritty
 
 #Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Droid Sans 11
+font pango:Inconsolata Sans 11
 
 # Load xresources for coloring
-exec xrdb -load ~/.Xresources
+# exec xrdb -load ~/.Xresources
 
 ## Base16 Gruvbox dark, medium
 # Author: Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
@@ -67,7 +67,7 @@ set $transparent  #00000000
 # Your preferred application launcher
 # Note: it's recommended that you pass the final command to sway
 # set $menu dmenu_path | dmenu -b -i -nb "$darkblack" -nf "$darkwhite" -sb "$darkwhite" -sf "$darkblack" -fn "Droid Sans-11" | xargs swaymsg exec
-set $menu dmenu_path | bemenu-run -b -i -nb "$darkblack" -nf "$darkwhite" -sb "$darkwhite" -sf "$darkblack" -fn "Droid Sans-11" | xargs swaymsg exec
+set $menu dmenu-run --bottom --ignorecase --nb "$darkblack" --nf "$darkwhite" --sb "$darkwhite" --sf "$darkblack" --fn "Inconsolata 12"
 
 ### Output configuration
 #
@@ -129,8 +129,8 @@ exec swayidle \
     bindsym $mod+Shift+q kill
 
     # start your launcher
-    bindsym $mod+d exec rofi -show run
-    bindsym $mod+Shift+d exec bemenu-run -b -i
+    bindsym $mod+Shift+d exec rofi -show run
+    bindsym $mod+d exec $menu
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -363,6 +363,7 @@ client.focused              $transparent    $darkwhite   $darkblack  $darkwhite 
 #
 exec urxvtd -q -o -f
 exec mako
+exec redshift
 exec /home/beto/.local/bin/devmon_notify
 
 #
