--- a/tmux.conf
+++ b/tmux.conf
@@ -54,8 +54,9 @@ set-window-option -g automatic-rename
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
-# color
-# set -g default-terminal "screen-256color"
+# enable truecolor support
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
