--- a/sway/config
+++ b/sway/config
@@ -21,7 +21,7 @@ set $term alacritty
 font pango:Inconsolata Sans 11
 
 # Load xresources for coloring
-# exec xrdb -load ~/.Xresources
+exec xrdb -load ~/.Xresources
 
 ## Base16 Gruvbox dark, medium
 # Author: Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
@@ -348,6 +348,9 @@ client.focused              $transparent    $darkwhite   $darkblack  $darkwhite 
     bindsym $mod+Shift+f exec $term -e "vifm"
     bindsym $mod+Shift+w exec "qutebrowser"
     bindsym $mod+x exec $term -title "Nvim Server" -e nvim
+    bindsym $mod+i exec zsh -c 'passmenuown'
+    bindsym $mod+Shift+i exec zsh -c 'passmenucbw'
+
     # bindsym $mod+Shift+p exec echo -e "Lock\nSuspend\nReboot\nShutdown" | dmenu -p "Power Option" -b -i -nb "$darkblack" -nf "$darkwhite" -sb "$darkwhite" -sf "$darkblack" -fn "Droid Sans-11" | awk '{print $1}' | tr -d '\r\n' | /usr/local/bin/rofi-power | xargs swaymsg exec
     bindsym $mod+Shift+p exec echo -e "Lock\nSuspend\nReboot\nShutdown" | rofi -dmenu -i -p "Power Options"| awk '{print $1}' | tr -d '\r\n' | $HOME/.local/bin/rofi-power | xargs swaymsg exec
     bindsym $mod+F11 exec $HOME/.local/bin/qrgen
