--- a/tmux.conf
+++ b/tmux.conf
@@ -22,7 +22,10 @@ setw -g pane-base-index 1
 # Renumber windows auto
 set -g renumber-windows on
 
-# Rather than constraining window size to the maximum size of any client
+# Escape time
+set-option -sg escape-time 10
+
+than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
 setw -g aggressive-resize on
@@ -55,8 +58,8 @@ set-window-option -g automatic-rename
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # enable truecolor support
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",tmux-256color:Tc"
 
 # Vi copypaste mode
 set-window-option -g mode-keys vi
