Updated lightline conf, and do not autostart tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -104,14 +104,15 @@ bind-key -n M-+ select-window -t 9
 set-option -g update-environment 'DBUS_SESSION_BUS_ADDRESS'
 
 set -g @nord_tmux_show_status_content "1"
+set -g @nord_tmux_no_patched_font "1"
 
 # tmux resurrcet & continuum config
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-nvim 'session'
-set -g @continuum-boot 'on'
+# set -g @continuum-boot 'on'
 set -g @continuum-restore 'on'
 
-if-shell 'test "$(uname) = "Darwin"' 'set -g @continuum-boot-options "alacritty"'
+# if-shell 'test "$(uname) = "Darwin"' 'set -g @continuum-boot-options "alacritty"'
 
 # urlview configuration
 set -g @urlview-key 'v'
