--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,14 @@ set -g status-justify centre # center align window list
 set -g status-left-length 20
 set -g status-right-length 140
 set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set -g status-right '#[fg=green]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --interval 2) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
+set -g status-right '#[fg=green,bg=default]#(~/.tmux/plugins/tmux-mem-cpu-load/tmux-mem-cpu-load --mem-mode 2 --cpu-mode 0 --averages-count 0 --interval 2) #[fg=black]• #[fg=red,dim,bg=default]#(uptime | cut -f 5 -d " " | cut -f 1 -d ",") #[fg=black]• #[fg=white,bg=default]%a %H:%M#[default] #[fg=blue]%Y-%m-%d'
+
+set -g status-style 'bg=#1E272C,fg=#6A7D89'
+set -g window-status-current-style 'fg=cyan'
+set -g mode-style 'bg=cyan,fg=black'
+set -g message-style 'bg=black,fg=cyan'
+set -g pane-border-style 'bg=black,fg=#1E272C'
+set -g pane-active-border-style 'bg=black,fg=#1E272C'
 
 # Status bar on top
 set-option -g status-position top
@@ -25,7 +32,7 @@ set -g renumber-windows on
 # Escape time
 set-option -sg escape-time 10
 
-than constraining window size to the maximum size of any client
+# than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
 setw -g aggressive-resize on
@@ -117,20 +124,15 @@ set -g @continuum-restore 'on'
 # urlview configuration
 set -g @urlview-key 'v'
 
-
 # Plugins
-# set -g @colors-solarized '256'
-set -g @tpm_plugins ' \
-    tmux-plugins/tmux-sensible \
-    tmux-plugins/tpm \
-    tmux-plugins/tmux-copycat \
-    tmux-plugins/tmux-yank \
-    arcticicestudio/nord-tmux \
-    tmux-plugins/tmux-open \
-    thewtex/tmux-mem-cpu-load \
-    tmux-plugins/tmux-resurrect \
-    tmux-plugins/tmux-continuum \
-    tmux-plugins/tmux-urlview \
-    '
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-urlview'
 
-run "$TMUX_PLUGIN_MANAGER_PATH/tpm/tpm"
+run -b '~/.tmux/plugins/tpm/tpm'
