Separated alacritty files, solved issue with display connection in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -108,7 +108,7 @@ bind-key -n M-* select-window -t 7
 bind-key -n M-) select-window -t 8
 bind-key -n M-+ select-window -t 9
 
-set-option -g update-environment 'DBUS_SESSION_BUS_ADDRESS'
+set-option -g update-environment 'DISPLAY WAYLAND_DISPLAY SSH_ASKPASS SSH_AUTH_SOCK DBUS_SESSION_BUS_ADDRESS'
 
 set -g @nord_tmux_show_status_content "1"
 set -g @nord_tmux_no_patched_font "1"
