--- a/alacritty/alacritty_darwin.yml
+++ b/alacritty/alacritty_darwin.yml
@@ -169,40 +169,69 @@ font:
 
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
-
-# Colors (nova): https://trevordmiller.com/projects/nova
+# Colors (Gruvbox dark)
 colors:
   # Default colors
   primary:
-    background: '0x3c4c55'
-    foreground: '0xc5d4dd'
-
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '0x3c4c55'
-    cursor: '0x7fc1ca'
+    # hard contrast: background = '0x1d2021'
+    background: '0x282828'
+    # soft contrast: background = '0x32302f'
+    foreground: '0xebdbb2'
 
   # Normal colors
   normal:
-    black:   '0x3c4c55'
-    red:     '0xdf8c8c'
-    green:   '0xa8ce93'
-    yellow:  '0xdada93'
-    blue:    '0x83afe5'
-    magenta: '0x9a93e1'
-    cyan:    '0x7fc1ca'
-    white:   '0xc5d4dd'
+    black:   '0x282828'
+    red:     '0xcc241d'
+    green:   '0x98971a'
+    yellow:  '0xd79921'
+    blue:    '0x458588'
+    magenta: '0xb16286'
+    cyan:    '0x689d6a'
+    white:   '0xa89984'
 
   # Bright colors
   bright:
-    black:   '0x899ba6'
-    red:     '0xf2c38f'
-    green:   '0xa8ce93'
-    yellow:  '0xdada93'
-    blue:    '0x83afe5'
-    magenta: '0xd18ec2'
-    cyan:    '0x7fc1ca'
-    white:   '0xe6eef3'
+    black:   '0x928374'
+    red:     '0xfb4934'
+    green:   '0xb8bb26'
+    yellow:  '0xfabd2f'
+    blue:    '0x83a598'
+    magenta: '0xd3869b'
+    cyan:    '0x8ec07c'
+    white:   '0xebdbb2'
+# Colors (nova): https://trevordmiller.com/projects/nova
+# colors:
+#   # Default colors
+#   primary:
+#     background: '0x3c4c55'
+#     foreground: '0xc5d4dd'
+#
+#   # Colors the cursor will use if `custom_cursor_colors` is true
+#   cursor:
+#     text: '0x3c4c55'
+#     cursor: '0x7fc1ca'
+#
+#   # Normal colors
+#   normal:
+#     black:   '0x3c4c55'
+#     red:     '0xdf8c8c'
+#     green:   '0xa8ce93'
+#     yellow:  '0xdada93'
+#     blue:    '0x83afe5'
+#     magenta: '0x9a93e1'
+#     cyan:    '0x7fc1ca'
+#     white:   '0xc5d4dd'
+#
+#   # Bright colors
+#   bright:
+#     black:   '0x899ba6'
+#     red:     '0xf2c38f'
+#     green:   '0xa8ce93'
+#     yellow:  '0xdada93'
+#     blue:    '0x83afe5'
+#     magenta: '0xd18ec2'
+#     cyan:    '0x7fc1ca'
+#     white:   '0xe6eef3'
 
     # Bright and dim foreground colors
     #
