--- a/tmux.conf
+++ b/tmux.conf
@@ -68,6 +68,10 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",tmux-256color:Tc"
 
+# border colours
+set -g pane-border-style fg=white
+set -g pane-active-border-style "bg=default fg=blue"
+
 # Vi copypaste mode
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
